--- a/ansible/roles/jetson/tasks/main.yaml
+++ b/ansible/roles/jetson/tasks/main.yaml
@@ -40,6 +40,7 @@
     - net-tools
     - pciutils
     - python3-dev
+    - python3-pip
     - ssh
     - sudo
     - systemd
@@ -68,12 +69,3 @@
     groups: sudo
     state: present
 
-- name: Download pip
-  get_url:
-    url: https://bootstrap.pypa.io/get-pip.py
-    dest: /tmp/get-pip.py
-
-- name: Install pip
-  shell: python3 /tmp/get-pip.py --user
-  become: yes
-  become_user: "{{ new_user.name }}"
